--- a/karta.css
+++ b/karta.css
@@ -18,7 +18,10 @@
     border-radius: 50px;
     transition: all 1s ease 0s;
     border-bottom: none;
+    background-image: url(mesh.png);
+    background-size: cover;
 }
+
 
 .karta:hover {
     width: 250px;
@@ -32,20 +35,33 @@
     margin-bottom: 20px;
 }
 
-.karta h2 {
+.center h2 {
     color: white;
     font-size: 40px;
     margin-top: 70px;
 }
 
-.karta a:link {
+.center img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    transition: all 1s ease 0s;
+}
+
+.center img:hover {
+    width: 100%;
+    height: 100%;
+    border-radius: 200px;
+}
+
+.center a:link {
     color: #ed4245;
 }
 
-.karta a:visited {
+.center a:visited {
     color: #343da1;
 }
 
-.karta a:hover {
+.center a:hover {
     color: chartreuse;
 }
