--- a/bg.css
+++ b/bg.css
@@ -1,13 +1,14 @@
-.baner {
-    background-image: url(katowice.jpg);
+.bg {
+    width: 100%;
+    height: 110vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.39),rgba(0,0,0,0.39)),url(scena.png);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    animation: animate-bg 50s infinite linear;
-    height: 600px;
+    background-position: center;
 }
 
-@keyframes animate-bg {
+
+
+/* @keyframes animate-bg {
     from {
         background-size: 100%;
         background-position: 0% 0%;
@@ -20,4 +21,12 @@
         background-size: 100%;
         background-position: 0% 0%;
     }
-}
+
+.bg {
+    background-image: url(scena.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    animation: animate-bg 50s infinite linear;
+    height: 1000px;
+} */
