--- a/karta.css
+++ b/karta.css
@@ -1,75 +1,44 @@
 .center {
-    margin-top: 250px;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+
+}
+
+
+.karta {
+    width: 250px;
+    height: 250px;
+    display: inline-block;
+    background-color: #202225;
     padding: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+    border: 2px solid #5865f2;
+    border-radius: 50px;
+    transition: all 1s ease 0s;
+    border-bottom: none;
+    background-size: cover;
 }
-@media (min-width: 800px){
-    /*pełen ekran */
-    .karta {
-        width: 350px;
-        height: 350px;
-        display: inline-block;
-        background-color: #2f3136;
-        padding: 0;
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-bottom: 20px;
-        border: 2px solid #5865f2;
-        border-radius: 50px;
-        transition: all 1s ease 0s;
-        border-bottom: none;
-        background-size: cover;
-    }
     
-    .karta:hover {
-        width: 350px;
-        height: 350px;
-        border-radius: 200px;
-        display: inline-block;
-        background-color: #5865f2;
-        padding: 0;
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-bottom: 20px;
-    }
-}
-@media (max-width: 800px){
-    /* nie pełen ekran */
-    .karta {
-        width: 250px;
-        height: 250px;
-        display: inline-block;
-        background-color: #2f3136;
-        padding: 0;
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-bottom: 20px;
-        border: 2px solid #5865f2;
-        border-radius: 50px;
-        transition: all 1s ease 0s;
-        border-bottom: none;
-        background-size: cover;
-    }
-    
-    .karta:hover {
-        width: 250px;
-        height: 250px;
-        border-radius: 200px;
-        display: inline-block;
-        background-color: #5865f2;
-        padding: 0;
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-bottom: 20px;
-    }
+.karta:hover {
+    width: 250px;
+    height: 250px;
+    border-radius: 200px;
+    display: inline-block;
+    background-color: #5865f2;
+    padding: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
 }
 
 .center h2 {
     color: white;
     font-size: 40px;
-    margin-top: 70px;
+    margin-top: 50px;
 }
 
 .center img {
