--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
-    background-color: #36393f;
+    background-color: #04090e;
 }
 
 h1 {
@@ -48,11 +48,12 @@ footer h3 {
 @media (min-width: 800px){
     /*pełen ekran */
     .tresc {
+        background-color: #2f3136;
         border-bottom: 2px solid #5865f2;
         border-right: 2px solid #5865f2;
         border-top: 2px solid #5865f2;
         color: white;
-        width: 50%;
+        width: 75%;
         border-top-right-radius: 50px;
         border-bottom-right-radius: 50px;
         margin-top: 400px;
@@ -62,11 +63,12 @@ footer h3 {
 @media (max-width: 800px){
     /* nie pełen ekran */
     .tresc {
+        background-color: #2f3136;
         border-bottom: 2px solid #5865f2;
         border-right: 2px solid #5865f2;
         border-top: 2px solid #5865f2;
         color: white;
-        width: 85%;
+        width: 90%;
         border-top-right-radius: 50px;
         border-bottom-right-radius: 50px;
         margin-top: 200px;
@@ -74,6 +76,7 @@ footer h3 {
 }
 
 .tresc p {
+    color: rgb(200, 200, 200);
     margin-left: 40px;
     margin-right: 20px;
     font-size: 18px;
@@ -86,21 +89,85 @@ footer h3 {
 
 @media (min-width: 800px){
     /*pełen ekran */
-    img {
-        width: 25%;
-        margin:0 auto;
-        display: block;
+    .zdjecie {
+        border-bottom: 2px solid #5865f2;
+        border-left: 2px solid #5865f2;
+        border-top: 2px solid #5865f2;
+        color: white;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        margin-top: 50px;
+        margin-left: 25%;
+        margin-bottom: 50px;
     }
 }
 
 @media (max-width: 800px){
     /* nie pełen ekran */
-    img {
-        width: 50%;
-        margin:0 auto;
-        display: block;
+    .zdjecie {
+        border-bottom: 2px solid #5865f2;
+        border-left: 2px solid #5865f2;
+        border-top: 2px solid #5865f2;
+        color: white;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        margin-top: 50px;
+        margin-left: 5%;
     }
 }
+
+.zdjecie img {
+    height: 100%;
+    width: 100%;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
+
+@media (min-width: 800px) {
+    .content {
+        margin-top: 15%;
+        text-align: center;
+        color: #fff;
+    }
+    
+    .content h1 {
+        font-size: 70px;
+        margin-top: 80px;
+    }
+    
+    .content p {
+        color: rgb(200, 200, 200);
+        margin: 20px auto;
+        font-weight: 100;
+        line-height: 25px;
+    }
+}
+
+@media (max-width: 800px) {
+    .content {
+        margin-top: 15%;
+        text-align: center;
+        color: #fff;
+    }
+    
+    .content h1 {
+        font-size: 40px;
+        margin-top: 80px;
+    }
+    
+    .content p {
+        color: rgb(200, 200, 200);
+        margin: 20px auto;
+        font-size: 10px;
+        font-weight: 100;
+        line-height: 25px;
+    }
+}
+
+
+
+
+
 
 /* Color Theme Swatches in Hex 
 .My-Color-Theme-1-hex { color: #4AA5BD; }
