--- a/nav.css
+++ b/nav.css
@@ -1,7 +1,7 @@
 @media (min-width: 800px) {
     /*pełen ekran */
     header {
-        background-color: #202225;
+        background-color: #20222500;
         position: sticky;
         top: 0;
         overflow: hidden;
@@ -89,7 +89,7 @@ li a.contact:hover {
         text-align: center;
         transition: all 0.5s;
         right: -100%;
-        background: #2f3136;
+        background: #36393f;
     }
     .navlinks li {
         display: block;
@@ -106,19 +106,16 @@ li a.contact:hover {
     #check:checked~.navlinks {
         right: 0;
     }
-}
-
-@media (max-width: 360px) {
-    /*nie pełen ekran */
     .logo {
-        margin-left: 10px;
+        margin-left: 25px;
         font-size: 25px;
     }
     .menu-btn {
-        margin-right: 10px;
+        margin-right: 25px;
         font-size: 25px;
     }
     .menu-btn:focus {
         color: blue;
     }
 }
+
